Chrome/style.css
article {
    font-family: verdana, sans-serif;
    word-wrap:break-word;
    break-word: all;
    padding-left: 20px;
}

.comment {
    padding-top: 10px;
    margin-left: 20px;
    padding-bottom: 5px;
}

article span a {
    font-weight: bold;
}

sup {
    color: #979797;
    font-size: 11px !important;
}

article span {
    color: #888888;
    font-size: 10px;
}

article span .upvotes {
    color: #ff8b24;
    font-weight: bold;
}

article span .downvotes {
    color: #9494ff;
    font-weight: bold;
}

.replies article {
    border-left: dotted 1px #cacaca;
}


.md blockquote {
    border-left: 2px solid rgb(51, 102, 153);
    margin-bottom: 5px;
    margin-left: 5px;
    margin-right: 15px;
    margin-top: 5px;
    padding-left: 4px;
}

.md p {
    margin-top: 8px;
    margin-bottom: 5px;
}

#reddit {
    margin-top: 40px;
    padding-bottom: 40px;
    width: 628px;
    padding-right: 20px;
    box-sizing: border-box;
}

#reddit header {
    overflow: auto;
    font-size: 16px;
    padding: 20px;
    padding-bottom: 5px;
}

#reddit header a {
    display: inline-block;
    color: #0066aa;
    width: 480px;
}

#reddit .redditSingleMessage {
    text-align: center;
}

#reddit .redditError {
    padding-left: 20px;
    display: table;
}

#reddit .redditError img {
    display: table-cell;
    width: 120px;
    height: auto;
    vertical-align: middle;
}

#reddit .redditError div {
    box-sizing: border-box;
    width: 430px;
    display: table-cell;
    vertical-align: middle;
    padding-left: 20px;
}

#reddit .redditError div h1 {
    font-size: 120%;
    margin: 0;
}

#reddit .redditError div p {
    display: inline-block;
    color: #c92323;
}

article a {
    color: #336699;
    text-decoration: none;
}

article a:hover {
    text-decoration: underline;
}

.redditTab {
    font-family: verdana, sans-serif;
    padding-left: 10px;
    padding-right: 10px;
    margin: 0;
    margin-bottom: -1px;
    height: 33px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    vertical-align: middle;
    overflow: hidden;
    font-size: 12px;
    text-shadow: 0 1px 0 rgba(255,255,255,.5);
    border: 1px solid #d3d3d3;
    border-left: none;
    color: #333;
}

.redditTab:focus {
    outline: 0;
}

.redditTab.active {
    background-color: #fff;
    border: 1px solid #c6c6c6;
    border-bottom: 1px solid #fff;
    box-shadow: inset 0 1px 0 #ddd;
    background-image: none;
}

.redditTab.border {
    border-left: 1px solid #d3d3d3;
}

.redditTab.active:hover {
    border-bottom: 1px solid #fff;
}

.redditTab:hover {
    border: 1px solid #9c9c9c;
}

#redditTabs {
    padding-left: 20px;
    border-bottom: 1px solid #d3d3d3;
}

#redditOverflow {
    position: relative;
    vertical-align: top;
    box-sizing: content-box;
    display: inline-block;
    width: 32px;
    height: 32px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    opacity: 0.5;
    border: 1px solid #d3d3d3;
    border-left: none;
    border-bottom: none;
}

#redditOverflow:focus {
    outline: 0;
}

#redditOverflow:hover {
    opacity: 1;
}

#redditOverflow img {
    position: absolute;
    top: 50%;
    left: 8px;
}

#redditOverflow ul {
    min-width: 130px;
    max-width: 250px;
    text-overflow: ellipsis;
    padding-top: 5px;
    padding-bottom: 5px;
    box-sizing: border-box;
    opacity: 1;
    border: 1px solid #ccc;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    background: #fff;
    margin-top: 30px;
    display: none;
    position: relative;
    white-space: nowrap;
    float: left;
    z-index: 100;
    -webkit-transition: opacity 1s ease-in;
    -moz-transition: opacity 1s ease-in;
    transition: opacity 1s ease-in;
}

#redditOverflow ul li {
    line-height: 1.8;
    padding-left: 10px;
    padding-right: 10px;
}

#redditOverflow ul li:hover {
    background: #333;
    color: #fff;
}

.flair {
    display: inline-block;
    margin-right: .5em;
    padding: 0 2px;
    background: #f5f5f5;
    color: #555;
    border: 1px solid #ddd;
    border-radius: 2px;
}

.collapse {
    font-family: verdana, sans-serif;
    font-size: 10px;
    padding-left: 20px;
    display: none;
    color: gray;
    font-style: italic;
    padding-top: 10px;
    padding-bottom: 5px;
}

.collapse a {
    font-weight: bold;
    color: gray;
}

.collapse a:hover {
    text-decoration: none;
}

.expandButton {
    font-style: normal;
}

.expandButton:hover,
.collapseButton:hover {
    text-decoration: underline;
}

.vote {
    text-align: center;
    margin-top: 12px;
    float: left;
    width: 15px;
}
header .vote {
    margin: 0;
    line-height: normal;
    margin-right: 10px;
    width: auto;
}

.postScore {
    text-align: center;
    color: #c6c6c6;
    font-weight: bold;
    font-size: small;
    padding-bottom: 5px;
}

.liked {
    color: #FF8B60;
}

.disliked {
    color: #9494FF;
}

.arrow {
    display: inline-block;
    width: 100%;
    height: 14px;
    display: inline-block;
    cursor: pointer;
    background-position: center center;
    background-repeat: no-repeat;
    width: 15px;
    margin-left: auto;
    margin-right: auto;
    outline: none;
}

.up {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -84px -799px;
    background-repeat: no-repeat;
}

.down {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -42px -799px;
    background-repeat: no-repeat;
}

.upmod {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -105px -799px;
    background-repeat: no-repeat;
}

.downmod {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -63px -799px;
    background-repeat: no-repeat;
}

.redditSpinner {
    height: 45px;
    width: 45px;
    margin: 0px auto;
    position: relative;
    -webkit-animation: rotation .6s infinite linear;
    -moz-animation: rotation .6s infinite linear;
    animation: rotation .6s infinite linear;
    border-left: 6px solid #ffcda9;
    border-right: 6px solid #ffcda9;
    border-bottom: 6px solid #ffcda9;
    border-top: 6px solid #ff6c00;
    border-radius: 100%;
}

@-webkit-keyframes rotation {
    from {-webkit-transform: rotate(0deg);}
    to {-webkit-transform: rotate(359deg);}
}

@-moz-keyframes rotation {
    from {-moz-transform: rotate(0deg);}
    to {-moz-transform: rotate(359deg);}
}

@keyframes rotation {
    from {transform: rotate(0deg);}
    to {transform: rotate(359deg);}
}

